--- a/app/src/main/res/layout/activity_complexion_men.xml
+++ b/app/src/main/res/layout/activity_complexion_men.xml
@@ -63,7 +63,7 @@
 
     <EditText
         android:id="@+id/inputMen"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/altura3"
@@ -83,7 +83,7 @@
 
     <EditText
         android:id="@+id/inputMen2"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/CM"
